[package]
name = "leet-code"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "first"
path = "1.rs"
[[bin]]
name = "second"
path = "2.rs"
[[bin]]
name = "palindrome"
path = "9.rs"
[[bin]]
name = "combination-sum"
path = "40.rs"
[[bin]]
name = "roman"
path = "20.rs"
[[bin]]
name = "complement"
path = "476.rs"
[[bin]]
name = "max-distance-array"
path = "624.rs"



[[bin]]
name = "bubble"
path = "bubble-sort.rs"
